# stremio-http-proxy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_fastapi.py  test_fastapi_query.py  test_tmdb.py  test_tmdb_local.py  test_upstream.py  test_upstream2.py
static/: app.css  app.js  cache_items.js  dashboard.js  index.html
stremio_http_proxy/: api.py  cli.py
stremio_http_proxy/client/: tmdb_client.py  torrent_client.py  torrserver_client.py  upstream_client.py
stremio_http_proxy/command/: abstract_command.py  add_torrent_command.py  cleanup_cache_command.py  monitor_torrents_command.py  serve_command.py  worker_command.py
stremio_http_proxy/container/: default_container.py
stremio_http_proxy/controller/: addon_controller.py  browser_controller.py  cache_controller.py  chunk_controller.py  dashboard_controller.py  health_controller.py  playback_controller.py  playlist_controller.py  whitelist_controller.py
stremio_http_proxy/entity/: cache_entry.py  whitelist_entry.py
stremio_http_proxy/helper/: hash_helper.py  (+2 more)
tests/: test_addon_proxy_service.py  test_basic_auth_service.py  test_cache_manager.py  test_cache_service.py  test_cache_token_service.py  test_dashboard_controller.py  test_dashboard_service.py  test_default_container.py  test_download_worker_service.py  test_next_episode_prefetch_service.py  test_playback_controller.py  test_playlist_service.py  test_stream_rewrite_service.py  test_torrent_service.py  test_torrserver_client.py  test_whitelist_repository.py
(+36 files in other folders)
