[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stremio-http-proxy"
version = "0.1.0"
description = "HTTP proxy for Stremio streams backed by TorrServer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "fastapi>=0.115.0",
    "httpx>=0.27.2",
    "injector>=0.22.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3",
]

[tool.setuptools.packages.find]
include = ["stremio_http_proxy*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
